# permetix

./: .gitignore  CLIENT_SECURITY_STATUS.md  DEPLOYMENT_STATUS.md  GRAFANA_CLOUD_SETUP.md  LICENSE_THEFT_PREVENTION.md  MULTITENANT_ARCHITECTURE.md  MULTITENANT_DEMO.md  MULTITENANT_TODO.md  README.md  REALTIME_DASHBOARD.md  SECURITY_DEMO_PLAN.md  SECURITY_DEMO_README.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_SHOWCASE.md  UPDATED_TOOLS.md  VENDOR_PORTAL_GUIDE.md  demo-security-attack.sh  demo-security-showcase.sh  fly.toml  prometheus-cloud.yml  reset-flyio-db-working.sh
.github/: BRANCH_PROTECTION.md  labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-labeler.yml
app/: db.py  main.py  security.py
app/static/: config.html  dashboard.html  index.html  login.html  metrics.html  multitenant.html  presentation.html  profile.html  realtime.html  realtime.js  security-demo.html  setup.html  style.css  vendor.html  welcome.html
clients/: README.md  launch_examples.sh
clients/c/: README.md  example.c  license_client.c  license_client_example  (+1 more)
clients/rust/: Cargo.toml  README.md  run_example.sh
clients/rust/src/: lib.rs  main.rs
docs/: ADMIN_API_DESIGN.md  DEVOPS_DEMO_SCENARIO.md  FIND_TRACE_BY_ID.md  FLYIO_SETUP_SUBDOMAINS.md  FLYIO_SUBDOMAIN_TENANTS.md  GRAFANA_CLOUD_TEMPO_SETUP.md  HTTP_METRICS.md  LOKI_LOG_FILTERING.md  OPERATIONAL_ONBOARDING.md  QUICKSTART_LOGS_TRACES.md  SECURITY_DEMO_README.md  SECURITY_SHOWCASE.md
grafana/: license_ops_dashboard.json
stress-test/: run_stress_test.sh
tests/: test_frontend.py  test_licenses.py
(+14 files in other folders)
