[package]
name = "license_client"
version = "0.1.0"
edition = "2021"
authors = ["Mercedes-Benz"]
description = "License server client library for Rust"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
